--- a/todo.txt
+++ b/todo.txt
@@ -1,92 +1,40 @@
-vim
-jockey-common, libgl1-mesa-dri:i386, libgl1-mesa-glx:i386, libc6:i386
-jockey-common libgl1-mesa-dri libgl1-mesa-glx
-ntfs-3g
+alacarte
 bumblebee
+bumblebee-nvidia
 chromium-browser
+diodon
+diodon-plugins
+filezilla
+gltron
+ia32-libs
+icedtea-7-plugin
+indicator-cpufreq
+indicator-multiload
+jockey-common
+laptop-mode-tools
+libGLU
+libappindicator1
+libc6:i386
+libgl1-mesa-dri
+libgl1-mesa-dri:i386
+libgl1-mesa-glx
+libgl1-mesa-glx:i386
+libglu1-mesa
+libglu1-mesa:i386
+my-weather-indicator
+ntfs-3g
+nvidia-319
+nvidia-319-updates
+nvidia-prime
+nvidia-settings-319
+nvidia-settings-319-updates
+openjdk-7-jre
+pidgin
 python-gpgme
 samba
-unrar
-libappindicator1
-pidgin
-ubuntu-restricted-extras
 terminator
-unity-tweak-tool 
-libappindicator1
-bumblebee-nvidia 
-libGLU
-gltron 
-libglu1-mesa
-ia32-libs
-libglu1-mesa:i386
-nvidia-prime 
-indicator-multiload
-indicator-cpufreq
-my-weather-indicator
-diodon diodon-plugins
-icedtea-7-plugin openjdk-7-jre
-nvidia-319 nvidia-settings-319 nvidia-prime
-bumblebee bumblebee-nvidia 
-alacarte 
-laptop-mode-tools
-nvidia-319-updates
-nvidia-319 nvidia-settings-319 nvidia-settings-319-updates nvidia-319-updates --purge
-filezilla
+ubuntu-restricted-extras
+unity-tweak-tool
+unrar
+vim
 virtualbox
-
---------------------------------
-
-for Ubuntu 13.10: sudo pico /etc/lightdm/lightdm.conf.d/10-ubuntu.conf
-
-[SeatDefaults]
-user-session=ubuntu
-# to disable guest login
-allow-guest=false
-# to enable user login manually
-greeter-show-manual-login=true
-
-sudo lwconfig assumeDefaultDomain true
-
-
-
-
-/*
-exec { 'puppet_vim_slink':
-        command => 'ln -s /usr/share/vim/addons/syntax/puppet.vim ~/.vim/plugin/',
-        require => Package['vim-puppet'],
-        path => '/bin',
-}
-
-user { 'iladmin':
-        ensure => 'present',
-        home   => "/home/iladmin",
-        comment => 'Administrador Interlegis',
-        shell  =>  '/bin/bash',,
-        managehome => 'true',
-        password => $password_hash,
-}
-*/
-
-
-
-/*
-
-# package example
-package {'':
-        ensure => present,
-        require => Package[''],
-}
-
-*/
-
-
-
-/*
-
-# Modify to ensure execution only if computer has not joined domain yet
-exec { 'likewise_join_domain':
-        command => 'sudo domainjoin-cli join interlegis.gov.br gouveia',
-        path => '/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:',
-        require => Package['likewise-open'],
-}
-*/
