--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,13 @@
+-----------------------------------------------------
+
+# PACOTES PARA WGET
+
+http://www.jgoodies.com/download/jdiskreport/jdiskreport-1_4_1.zip
+http://cmacom.ru/icon/20598/1.3.2.png
+
+-----------------------------------------------------
+
+
 alacarte
 chromium-browser
 diodon
